# kustomize-quick-create

./: .gitignore  Cargo.toml  LICENSE  README.md  default.nix  flake.nix  shell.nix
src/: main.rs  render.rs
src/resources/: base.rs  common.rs  envs.rs  mixins.rs  mod.rs
templates/: kustomization.yaml
templates/base/: deployment.yaml  ingress.yaml  service.yaml  statefulset.yaml
templates/envs/: kustomization.yaml  secrets.yaml
templates/mixins/: mariadb.yaml  redis.yaml
